Adding a meta object and setting the radius to 0 causes hang #38149

Closed
opened 2014-01-10 09:20:48 +01:00 by gandalf3 · 8 comments
Member

System Information
Archlinux
Nvidia 7900GT

Blender Version
Broken: 2.69 release and 2.69.8 17a4ba2

Short description of error
Adding a meta object and setting the radius to 0 in the redo menu (bottom of tool shelf or by pressing F3) causes blender to hang.

Exact steps for others to reproduce the error

  1. Open default startup
  2. Add a meta object
  3. Set the radius to 0 in the redo menu
**System Information** Archlinux Nvidia 7900GT **Blender Version** Broken: 2.69 release and 2.69.8 17a4ba2 **Short description of error** Adding a meta object and setting the radius to 0 in the redo menu (bottom of tool shelf or by pressing F3) causes blender to hang. **Exact steps for others to reproduce the error** 1. Open default startup 2. Add a meta object 3. Set the radius to 0 in the redo menu
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3

This issue was referenced by blender/blender-addons-contrib@9e1ca28589

This issue was referenced by blender/blender-addons-contrib@9e1ca2858920f059c957401160d0a9b75b6ff2bf

This issue was referenced by 9e1ca28589

This issue was referenced by 9e1ca2858920f059c957401160d0a9b75b6ff2bf

Added subscriber: @brecht

Added subscriber: @brecht

Fixed now, thanks for the report.

Fixed now, thanks for the report.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 9e1ca28589.

Closed by commit 9e1ca28589.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38149
No description provided.