Fix T38149: crash adding metaball with zero radius.

This incorrectly use abs(), that's for integers, not floats.